added a new simple change in the code
works perfectly...

Co-Authored-By: Dino-King <115851542+Dino-King@users.noreply.github.com>

--- a/Recorder and real time output.ipynb
+++ b/Recorder and real time output.ipynb
@@ -28,7 +28,8 @@
     "print(\"finished\")\n",
     "print(\"The Recorded speech is saved\")\n",
     "write(r'E:\\rcording\\output1.wav', fs, myrecording)  # Save as WAV file\n",
-    "playsound(r'E:\\rcording\\output1.wav')"
+    "playsound(r'E:\\rcording\\output1.wav')\n",
+    "#hence done recording part"
    ]
   },
   {
